# synapstock

./: pyproject.toml
scripts/: miro_e2e_test.py  miro_mindmap_api_test.py
src/synapstock/adapters/: __init__.py
src/synapstock/adapters/local/: __init__.py  board_repo.py  folder_mindmap.py
src/synapstock/adapters/miro/: __init__.py  miro_mindmap.py
src/synapstock/domain/: __init__.py  models.py  ports.py
src/synapstock/services/: board_service.py
tests/fixtures/boards/: IT.json
tests/fixtures/folder_mindmap/IT/IT/보안/보안 서비스/관제/: 에스원.json  이노뎁.json
tests/fixtures/folder_mindmap/IT/IT/보안/보안 서비스/인증서/: 슈프리마.json  알체라.json
tests/fixtures/folder_mindmap/IT/IT/보안/보안 서비스/장비/: 아이디스.json  포커스에이치엔에스.json
tests/fixtures/folder_mindmap/IT/IT/보안/정보보안/네트워크/: 안랩.json  윈스.json  지니언스.json
tests/fixtures/folder_mindmap/IT/IT/보안/정보보안/보안관리/: 모니터랩.json  샌즈랩.json  이스트소프트.json
tests/fixtures/folder_mindmap/IT/IT/소프트웨어/금융/: 더존비즈온.json  웹캐시.json
tests/fixtures/folder_mindmap/IT/IT/소프트웨어/업무/: 엠로.json  폴라리스오피스.json  한글과컴퓨터.json
tests/fixtures/folder_mindmap/IT/IT/소프트웨어/자동화/: 링크제네시스.json  비츠로시스.json
tests/fixtures/folder_mindmap/IT/IT/인터넷/: NAVER.json  이스트에이드.json  카카오.json
tests/integration/services/: test_board_service_integration.py
tests/unit/: __init__.py
tests/unit/adapters/: __init__.py
tests/unit/adapters/local/: __init__.py  test_board_repo.py  test_folder_mindmap.py
tests/unit/adapters/miro/: test_miro_mindmap.py
tests/unit/domain/: __init__.py  test_board.py  test_models.py
tests/unit/services/: test_board_service.py
(+5 files in other folders)
