[project]
name = "synapstock"
version = "0.1.0"
description = "Universal Mindmap Orchestrator connecting News and Stocks"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "dotenv>=0.9.9",
    "mypy>=1.19.1",
    "pydantic>=2.12.5",
    "requests>=2.32.5",
    "ruff>=0.15.5",
]

[project.scripts]
synapstock = "synapstock.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/synapstock"]

[dependency-groups]
dev = ["pytest>=9.0.2"]

[tool.mypy]
python_version = "3.12"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.ruff]
target-version = "py312"
line-length = 88
